fix wrapper padding on mobile

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -152,7 +152,12 @@ strong {
   flex: 1 0 auto;
 
   @media screen and (max-width: 720px) {
-    padding: 0 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  @media screen and (max-width: 500px) {
+    padding-top: 48px;
   }
 }
 
